--- a/app/views/1-0-0/gov-03.html
+++ b/app/views/1-0-0/gov-03.html
@@ -88,7 +88,7 @@
           <input class="govuk-input govuk-input--width-5" id="parent-governors" name="parent-governors" type="text" inputmode="numeric" value="{{ data['parent-governors'] }}">
         </div>
 
-          <button id="continueTotal" class="govuk-button" data-module="govuk-button">Continue</button>
+          <button id="continueTotal" class="govuk-button" data-module="govuk-button">Save and continue</button>
 
         </form>
     </div>
