--- a/app/views/1-0-0/gov-07.html
+++ b/app/views/1-0-0/gov-07.html
@@ -17,7 +17,7 @@
           <div class="govuk-error-summary__body">
             <ul class="govuk-list govuk-error-summary__list">
               <li>
-            <a href="#passport-issued-day">The total number for disability must be the same as the number of board members. Enter disability figures that are equal to <span id="totalGovernors"></span> (the number of board members)</a>
+            <a href="#passport-issued-day">The total number for all disabilities must be the same as the number of board members. Enter disability numbers that are equal to <span id="totalGovernors"></span> (the number of board members)</a>
               </li>
               <!-- <li>
                 <a href="#postcode-input">Enter a postcode, like AA1 1AA</a>
