--- a/app/views/1-0-0/gov-08.html
+++ b/app/views/1-0-0/gov-08.html
@@ -18,7 +18,7 @@
             <div class="govuk-error-summary__body">
               <ul class="govuk-list govuk-error-summary__list">
                 <li>
-              <a href="#passport-issued-day">The total number for ethnic groups must be the same as the number of board members. Enter ethnic group figures that are equal to <span id="totalGovernors"></span> (the number of board members)</a>
+              <a href="#passport-issued-day">The total number for ethnic groups must be the same as the number of board members. Enter ethnic group numbers that are equal to <span id="totalGovernors"></span> (the number of board members)</a>
                 </li>
                 <!-- <li>
                   <a href="#postcode-input">Enter a postcode, like AA1 1AA</a>
@@ -34,7 +34,7 @@
           Which ethnic groups are represented on the board?
       </h1>
       
-      <p class="govuk-body">Enter figures for groups that apply.</p>
+      <p class="govuk-body">Enter numbers for groups that apply.</p>
      
       <form action=" " method="post" class="form">
       <h2 class="govuk-heading-m">White</h2>
@@ -159,7 +159,7 @@
       
       <div class="govuk-form-group">
         <label class="govuk-label" for="other-black">
-          Any other Black / African / Caribbean
+          Any other Black / Black British / Caribbean
         </label>
         <input class="govuk-input govuk-input--width-5" id="other-black" name="other-black" type="text" value="{{ data['other-black'] }}">
       </div>
