--- a/app/views/1-0-0/gov-09.html
+++ b/app/views/1-0-0/gov-09.html
@@ -20,7 +20,7 @@
             <div class="govuk-error-summary__body">
               <ul class="govuk-list govuk-error-summary__list">
                 <li>
-              <a href="#passport-issued-day">The total number for time served must be the same as the number of board members. Enter time served figures that are equal to <span id="totalGovernors"></span> (the number of board members)</a>
+              <a href="#passport-issued-day">The total number for time served must be the same as the number of board members. Enter time served numbers that are equal to <span id="totalGovernors"></span> (the number of board members)</a>
                 </li>
                 <!-- <li>
                   <a href="#postcode-input">Enter a postcode, like AA1 1AA</a>
@@ -36,7 +36,7 @@
         How long have board members served since they were appointed?
       </h1>
       
-      <p class="govuk-body">Enter figures accounting for all board members.</p>
+      <p class="govuk-body">Enter numbers accounting for all board members.</p>
       <form action="" method="post" class="form">
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="ltoy">
