--- a/app/views/index.html
+++ b/app/views/index.html
@@ -51,6 +51,7 @@
                     <li>Added a new page vaiant <a href="1-0-0/gov-04c.html">gov-04c</a></li>
                     <li>Validation working <a href="1-0-0/gov-05.html">gov-05</a></li>
                     <li>Validation working <a href="1-0-0/gov-06.html">gov-06</a></li>
+                    <li>Updated content to match what has been developed</li>
 
                   
                 </ul>
@@ -59,6 +60,7 @@
             <td class="govuk-table__cell "><a href="1-0-0/start.html">Start now</a></td>
         </tr>
         </tbody>
+        
         </table>
 
     </div>
