--- a/app/views/1-0-0/gov-06.html
+++ b/app/views/1-0-0/gov-06.html
@@ -17,7 +17,7 @@
             <div class="govuk-error-summary__body">
               <ul class="govuk-list govuk-error-summary__list">
                 <li>
-              <a href="#passport-issued-day">The total number for age ranges must be the same as the number of board members. Enter age range figures that are equal to <span id="totalGovernors"></span> (the number of board members)</a>
+              <a href="#passport-issued-day">The total number for age ranges must be the same as the number of board members. Enter age range numbers that are equal to <span id="totalGovernors"></span> (the number of board members)</a>
                 </li>
                 <!-- <li>
                   <a href="#postcode-input">Enter a postcode, like AA1 1AA</a>
@@ -32,7 +32,7 @@
         What are the age ranges of the board members?
       </h1>
       
-      <p class="govuk-body">Enter figures for governors into applicable age ranges.</p>
+      <p class="govuk-body">Enter numbers for governors into applicable age ranges.</p>
      
       <form action="" method="post" class="form">
       <div class="govuk-form-group">
