ehtnicity content updates

--- a/app/views/1-0-0/gov-08.html
+++ b/app/views/1-0-0/gov-08.html
@@ -145,7 +145,7 @@
       
       <div class="govuk-form-group">
         <label class="govuk-label" for="african">
-          African
+          African background
         </label>
         <input class="govuk-input govuk-input--width-5" id="african" name="african" type="text" value="{{ data['african'] }}">
       </div>
@@ -159,12 +159,12 @@
       
       <div class="govuk-form-group">
         <label class="govuk-label" for="other-black">
-          Any other Black / Black British / Caribbean
+          Any other Black, Black British or Caribbean background
         </label>
         <input class="govuk-input govuk-input--width-5" id="other-black" name="other-black" type="text" value="{{ data['other-black'] }}">
       </div>
       
-      <h2 class="govuk-heading-m">Other</h2>      
+      <h2 class="govuk-heading-m">Other ethnic group</h2>      
       
       <div class="govuk-form-group">
         <label class="govuk-label" for="arab">
@@ -181,7 +181,7 @@
       </div>
       
 
-      <h2 class="govuk-heading-m">Does not wish to delace ethnicity</h2>
+      <h2 class="govuk-heading-m">Does not wish to declare ethnicity</h2>
       <div class="govuk-form-group">
         <label class="govuk-label" for="ethnicity-pnts">
           Prefer not to say
