--- a/app/views/1-0-0/gov-12.html
+++ b/app/views/1-0-0/gov-12.html
@@ -465,7 +465,7 @@
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-two-thirds">
-          African
+          African background
         </dt>
         <dd class="govuk-summary-list__value  govuk-table__header--numeric">
             {{ data['african'] }}
@@ -481,7 +481,7 @@
       </div>       
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-two-thirds">
-          Any other Black / African / Caribbean background
+          Any other Black, Black British or Caribbean background
         </dt>
         <dd class="govuk-summary-list__value  govuk-table__header--numeric">
           {{ data['other-black'] }}
@@ -492,7 +492,7 @@
     </dl>
 
 
-    <h3 class="govuk-heading-s">Other</h3>
+    <h3 class="govuk-heading-s">Other ethnic group</h3>
 
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
