start page conent updates

--- a/app/views/1-0-0/start.html
+++ b/app/views/1-0-0/start.html
@@ -16,7 +16,17 @@ FE Workforce - Start
       
       <p>Use this service to record governor data as at 31 July 2021.</p>
         
-      <p>Further education (FE) colleges, local councils and independent training providers that receive funding from ESFA must return governor data from 2020 to 2021 academic year.</p>
+      <p>You should complete a return if your organisation is a FE or sixth form college and receives funding through one or more of the following funding models:</p>
+      <ul class="govuk-list govuk-list--bullet">
+          <li>16-19 (excluding Apprenticeships)</li>
+          <li>Adult skills</li>
+          <li>Apprenticeships (from 1 May 2017) including Levy funding</li>
+          <li>Community Learning</li>
+          <li>European Social Funding (ESF)</li>
+          <li>Other Adult</li>
+          <li>Other 16-19</li>
+          
+        </ul>
         
         <p>The collection will  provide  governor board formation and composition data of the sector to the Department for Education (DfE).</p>  
         
@@ -32,12 +42,12 @@ FE Workforce - Start
         <p class="govuk-body">This collection uses an online form. You can save progress and return to complete the collection or edit your data collection within the reporting period.</p>
 
         <p class="govuk-body">You will need:</p>
-<ul class="govuk-list govuk-list--bullet">
-  <li>the set size of the board</li>
-  <li>governor types and numbers</li>
-  <li>board composition by gender, age, ethnicity, time served</li>
-  <li>board vacancy details</li>
-</ul>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>the allowed board size stipulated in the organisation's articles of association</li>
+            <li>governor types and numbers</li>
+            <li>board composition by gender, age, ethnicity, time served</li>
+            <li>board vacancy details</li>
+          </ul>
       
 
     </div>
