content updates for 1-0-0

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -14,6 +14,7 @@ $govuk-assets-path: '/govuk/assets/';
 @import "patterns/step-by-step-related";
 @import "patterns/task-list";
 @import "patterns/related-items";
+@import "patterns/tiles";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 
@@ -25,15 +26,19 @@ $govuk-assets-path: '/govuk/assets/';
     float: right;
 }
 
+#gov-error.hidden {
+    display: none;
+}
+
 #gov-03-error.hidden {
     display: none;
 }
 
-#gov04CheckRadio.hidden {
+#govCheckRadioError.hidden {
     display: none;
 }
 
-#gov-04-error-for-input.hidden {
+#gov-error-for-radios.hidden {
     display: none;
 }
 
@@ -70,5 +75,17 @@ $govuk-assets-path: '/govuk/assets/';
 }
 
 .govuk-error-message.hidden {
+    display: none;
+}
+
+#groupInputErrorMessage.hide {
+    display: none;
+}
+
+.new-text.hidden {
+    display: none;
+}
+
+.govuk-warning-text.hidden {
     display: none;
 }
