--- a/app/views/1-0-0/gov-03.html
+++ b/app/views/1-0-0/gov-03.html
@@ -31,10 +31,10 @@
         How is the board currently represented?
       </h1>
       
-        <p>Enter figures for current board members. Do not include co-opted governors.</p>
+        <p>Enter numbers. Do not include co-opted governors.</p>
        
 
-      <form id="onInputChange" action="" method="post" class="form">
+      <form id="onInputChange" action="gov-04" method="post" class="form">
 
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--m" for="staff-governors">
@@ -103,7 +103,7 @@
     
 
       <h1 class="govuk-heading-l">
-        <span id="totalGovernors"></span>
+        <span class="totalGovernors"></span>
         
 
       </h1>
