--- a/app/views/1-0-0/gov-12.html
+++ b/app/views/1-0-0/gov-12.html
@@ -25,7 +25,7 @@
       
           <div class="govuk-heading-s inline-block">Status</div>
           <strong id="boardSizeComplete" class="govuk-tag float-right">
-            Complete
+           Completed
           </strong>
           <strong id="boardSizeIncomplete" class="govuk-tag govuk-tag--grey float-right">
             Not started
@@ -64,7 +64,7 @@
 
       <div class="govuk-heading-s inline-block">Status</div>
           <strong id="boardRepComplete" class="govuk-tag float-right">
-            Complete
+           Completed
           </strong>
           <strong id="boardRepIncomplete" class="govuk-tag govuk-tag--grey float-right">
               Not started
@@ -123,7 +123,7 @@
     </h2>
     <div class="govuk-heading-s inline-block">Status</div>
     <strong id="genderComplete" class="govuk-tag float-right">
-      Complete
+     Completed
     </strong>
     <strong id="genderIncomplete" class="govuk-tag govuk-tag--grey float-right">
      Not started
@@ -177,7 +177,7 @@
 
     <div class="govuk-heading-s inline-block">Status</div>
     <strong id="ageComplete" class="govuk-tag float-right">
-        Complete
+       Completed
       </strong>
     <strong id="ageIncomplete" class="govuk-tag govuk-tag--grey float-right">
      Not started
@@ -276,7 +276,7 @@
   
       <div class="govuk-heading-s inline-block">Status</div>
       <strong id="disabilityComplete" class="govuk-tag float-right">
-        Complete
+       Completed
       </strong>
       <strong id="disabilityIncomplete" class="govuk-tag govuk-tag--grey float-right">
          Not started
@@ -285,7 +285,7 @@
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key govuk-!-width-two-thirds">
-            How many governors consider themselves to have a disability?
+            How many board members consider themselves to have a disability?
           </dt>
           <dd class="govuk-summary-list__value  govuk-table__header--numeric">
               {{ data['disability'] }}
@@ -322,7 +322,7 @@
     
     <div class="govuk-heading-s inline-block">Status</div>
     <strong id="ethnicityComplete" class="govuk-tag float-right">
-      Complete
+     Completed
     </strong>
     <strong id="ethnicityIncomplete" class="govuk-tag govuk-tag--grey float-right">
      Not started
@@ -538,7 +538,7 @@
 
     <div class="govuk-heading-s inline-block">Status</div>
     <strong id="timeServedComplete" class="govuk-tag float-right">
-        Complete
+       Completed
       </strong>
     <strong id="timeServedIncomplete" class="govuk-tag govuk-tag--grey float-right">
      Not started
@@ -598,7 +598,7 @@
 
       <div class="govuk-heading-s inline-block">Status</div>
       <strong id="vacancyComplete" class="govuk-tag float-right">
-          Complete
+         Completed
         </strong>
       <strong id="vacancyIncomplete" class="govuk-tag govuk-tag--grey float-right">
        Not started
@@ -610,7 +610,7 @@
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key govuk-!-width-two-thirds">
-              Were there any board member vacancies during academic year?
+              Were there any board member vacancies during the last academic year?
           </dt>
           <dd class="govuk-summary-list__value  govuk-table__header--numeric">
               <div id="open-vacancies">{{ data['open-vacancies'] }}</div>
@@ -619,7 +619,7 @@
       
       <div class="govuk-summary-list__row summaries hide">
         <dt class="govuk-summary-list__key govuk-!-width-two-thirds">
-          How many governor vacancies were there over the last academic year?
+          How many board member vacancies were there over the last academic year?
         </dt>
         <dd class="govuk-summary-list__value  govuk-table__header--numeric">
           {{ data['vacancies'] }}
@@ -637,7 +637,7 @@
 
       <div class="govuk-summary-list__row summaries hide">
         <dt class="govuk-summary-list__key govuk-!-width-two-thirds">
-          How many took 6 months or longer to fill
+          How many took 6 months or longer to fill?
         </dt>
         <dd class="govuk-summary-list__value  govuk-table__header--numeric">
           {{ data['6months'] }}
