--- a/app/views/1-0-0/start.html
+++ b/app/views/1-0-0/start.html
@@ -16,7 +16,7 @@ FE Workforce - Start
       
       <p>Use this service to record governor data as at 31 July 2021.</p>
         
-      <p>You should complete a return if your organisation is a FE or sixth form college and receives funding through one or more of the following funding models:</p>
+      <p>You should complete a return if your organisation is a further education (FE) or sixth-form college and receives funding through one or more of the following funding models:</p>
       <ul class="govuk-list govuk-list--bullet">
           <li>16-19 (excluding Apprenticeships)</li>
           <li>Adult skills</li>
@@ -39,7 +39,7 @@ FE Workforce - Start
 
           <h2 class="govuk-heading-m">Before you start</h2>
 
-        <p class="govuk-body">This collection uses an online form. You can save progress and return to complete the collection or edit your data collection within the reporting period.</p>
+        <p class="govuk-body">This collection uses an online form. You can save progress and return to complete or edit your data collection within the reporting period.</p>
 
         <p class="govuk-body">You will need:</p>
           <ul class="govuk-list govuk-list--bullet">
