--- a/app/views/1-0-0/gov-04.html
+++ b/app/views/1-0-0/gov-04.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<div id="gov04CheckRadio" class="govuk-error-summary hidden" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+<div id="govCheckRadioError" class="govuk-error-summary hidden" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
     <h2 class="govuk-error-summary__title" id="error-summary-title">
       There is a problem
     </h2>
@@ -41,7 +41,7 @@
               {% include "./includes/gov_data_tag.html" %}  
 
         <h1 class="govuk-heading-l">
-        A total of <span id="totalGovernors">12</span> board members are recorded
+        A total of <span class="totalGovernors">12</span> board members are recorded
       </h1>
       
       <p class="govuk-body">Board representation:</p>
