--- a/app/views/1-0-0/gov-05.html
+++ b/app/views/1-0-0/gov-05.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <div id="gov-05-error" class="govuk-error-summary hidden" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+      <div id="gov-error" class="govuk-error-summary hidden" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
         <h2 class="govuk-error-summary__title" id="error-summary-title">
           There is a problem
         </h2>
@@ -34,7 +34,7 @@
       
       <p class="govuk-body">Enter numbers into applicable gender categories</p>
 
-      <form action="" method="post" class="form">
+      <form action="gov-06" method="post" class="form">
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="male">
           Male board members
@@ -82,9 +82,9 @@
             Save and continue
           </button>
           
-          <button id="genderCompButtonExit" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+          <!-- <button id="genderCompButtonExit" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
             Save and exit
-          </button>
+          </button> -->
         </div>
 </form>
         
@@ -96,7 +96,7 @@
   </div>
   <div class="govuk-visually-hidden">
     <h1 class="govuk-heading-l">
-      A total of <span id="totalGovernors">12</span> board members are recorded
+      A total of <span class="totalGovernors"></span> board members are recorded
     </h1>
     
     <p class="govuk-body">Board representation:</p>
