--- a/app/views/1-0-0/gov-06.html
+++ b/app/views/1-0-0/gov-06.html
@@ -10,14 +10,14 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <div id="gov-06-error" class="govuk-error-summary hidden" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+        <div id="gov-error" class="govuk-error-summary hidden" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
             <h2 class="govuk-error-summary__title" id="error-summary-title">
               There is a problem
             </h2>
             <div class="govuk-error-summary__body">
               <ul class="govuk-list govuk-error-summary__list">
                 <li>
-              <a href="#passport-issued-day">The total number for age ranges must be the same as the number of board members. Enter age range numbers that are equal to <span id="totalGovernors"></span> (the number of board members)</a>
+              <a href="#passport-issued-day">The total number for age ranges must be the same as the number of board members. Enter age range numbers that are equal to <span class="totalGovernors"></span> (the number of board members)</a>
                 </li>
                 <!-- <li>
                   <a href="#postcode-input">Enter a postcode, like AA1 1AA</a>
@@ -34,7 +34,7 @@
       
       <p class="govuk-body">Enter numbers for governors into applicable age ranges.</p>
      
-      <form action="" method="post" class="form">
+      <form action="gov-07" method="post" class="form">
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="16">
           16 to 18 years
@@ -103,9 +103,9 @@
           Save and continue
         </button>
       
-        <button id="ageRangeButtonExit" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+        <!-- <button id="ageRangeButtonExit" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
           Save and exit
-        </button>
+        </button> -->
     </div>
     </form >
 
@@ -115,7 +115,7 @@
 
 <div class="govuk-visually-hidden">
     <h1 class="govuk-heading-l">
-      A total of <span id="totalGovernors"></span> board members are recorded
+      A total of <span class="totalGovernors"></span> board members are recorded
     </h1>
     
     <p class="govuk-body">Board representation:</p>
