--- a/app/views/1-0-0/gov-09.html
+++ b/app/views/1-0-0/gov-09.html
@@ -13,14 +13,14 @@
 
     <div class="govuk-grid-column-two-thirds">
 
-        <div id="gov-09-error" class="govuk-error-summary hidden" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+        <div id="gov-error" class="govuk-error-summary hidden" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
             <h2 class="govuk-error-summary__title" id="error-summary-title">
               There is a problem
             </h2>
             <div class="govuk-error-summary__body">
               <ul class="govuk-list govuk-error-summary__list">
                 <li>
-              <a href="#passport-issued-day">The total number for all time served must be the same as the number of board members. Enter time served numbers that are equal to <span id="totalGovernors"></span> (the number of board members)</a>
+              <a href="#passport-issued-day">The total numbers entered must be the same as the number of board members. Enter numbers that are equal to <span class="totalGovernors"></span>.</a>
                 </li>
                 <!-- <li>
                   <a href="#postcode-input">Enter a postcode, like AA1 1AA</a>
@@ -37,7 +37,7 @@
       </h1>
       
       <p class="govuk-body">Enter numbers accounting for all board members.</p>
-      <form action="" method="post" class="form">
+      <form action="gov-10" method="post" class="form">
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="ltoy">
           Less than 1 year served
@@ -79,9 +79,9 @@
         <button id="timeServedButton" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
             Save and continue
           </button>
-        <button id="timeServedButtonExit" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+        <!-- <button id="timeServedButtonExit" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
             Save and exit
-        </button>
+        </button> -->
       </div>
 
     </form>
@@ -93,7 +93,7 @@
 
   <div class="govuk-visually-hidden">
       <h1 class="govuk-heading-l">
-        A total of <span id="totalGovernors"></span> board members are recorded
+        A total of <span class="totalGovernors"></span> board members are recorded
       </h1>
       
       <p class="govuk-body">Board representation:</p>
