--- a/app/views/1-0-0/gov-10.html
+++ b/app/views/1-0-0/gov-10.html
@@ -44,9 +44,9 @@
           <button id="vacancyButton" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
             Save and continue
           </button>
-          <button id="vacancyButtonExit" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+          <!-- <button id="vacancyButtonExit" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
             Save and exit
-          </button>
+          </button> -->
       </div>
           </form>
     </div>
