--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,6 +28,15 @@
             Start now
           </button>
       </form> -->
+
+      <!-- <div class="govuk-warning-text">
+          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text">
+            <span class="govuk-warning-text__assistive">Warning</span>
+            If you use this prototype often, you'll need to <a class="govuk-link govuk-link--no-visited-state" href="/prototype-admin/clear-data"> clear the data</a> each time you view a different version.
+          </strong>
+        </div> -->
+
       <table class="govuk-table">
         <caption class="govuk-table__caption visually-hidden">List of versions</caption>
         
@@ -43,16 +52,15 @@
           <tr class="govuk-table__row">
             <th class="govuk-table__header" scope="row">Sardine 1.0.0 <p>29/07/2021</p></th>
             <td class="govuk-table__cell ">
-                <p>Public Beta - 01/07/2021 - in progress</p>
+                <p>Public Beta - 01/07/2021 - stopped</p>
                 
                 <ul class="govuk-list govuk-list--bullet">
-                    <li>Working on a new version of <a href="1-0-0/start.html">Homepage</a></li>
-                    <li>Added a new page <a href="1-0-0/gov-04b.html">gov-04b</a></li>
-                    <li>Added a new page vaiant <a href="1-0-0/gov-04c.html">gov-04c</a></li>
-                    <li>Validation working <a href="1-0-0/gov-05.html">gov-05</a></li>
-                    <li>Validation working <a href="1-0-0/gov-06.html">gov-06</a></li>
-                    <li>Updated content to match what has been developed</li>
-
+                    <li>Updated content on the <a href="1-0-0/start.html">Start page</a>. User story <a target="blank" href="https://sfa-gov-uk.visualstudio.com.mcas.ms/DCT/_workitems/edit/114652/">114652</a></li>
+                    <li>Updated content on <a href="1-0-0/gov-03.html">Gov 03</a>. User story <a target="blank" href="https://sfa-gov-uk.visualstudio.com.mcas.ms/DCT/_workitems/edit/114786/">114786</a></li>
+                    <li>Updated content on <a href="1-0-0/gov-12.html">Gov 12 check your answers</a>. User story <a target="blank" href="https://sfa-gov-uk.visualstudio.com.mcas.ms/DCT/_workitems/edit/114802/">114802</a></li>
+                    <li>Updated content on <a href="1-0-0/gov-07.html">Gov 07 disability data</a>. User story <a target="blank" href="https://sfa-gov-uk.visualstudio.com.mcas.ms/DCT/_workitems/edit/114787/">114787</a></li>
+                    <li>Updated content on <a href="1-0-0/gov-09.html">Gov 09 time board members have served</a>. User story <a target="blank" href="https://sfa-gov-uk.visualstudio.com.mcas.ms/DCT/_workitems/edit/114788/">114788</a></li>
+                    
                   
                 </ul>
             </td>
@@ -60,7 +68,24 @@
             <td class="govuk-table__cell "><a href="1-0-0/start.html">Start now</a></td>
         </tr>
         </tbody>
-        
+        <!-- <tbody class="govuk-table__body">
+      
+            <tr class="govuk-table__row">
+              <th class="govuk-table__header" scope="row">Sardine 1.0.1 <p>31/08/2021</p></th>
+              <td class="govuk-table__cell ">
+                  <p>Public Beta - 01/07/2021 - in progress</p>
+                  
+                  <ul class="govuk-list govuk-list--bullet">
+                      <li>New page <a href="1-0-1/choose-journey.html">Choose journey</a></li>
+                     
+  
+                    
+                  </ul>
+              </td>
+              <td class="govuk-table__cell "><a href="#">Contents</a></td>
+              <td class="govuk-table__cell "><a href="1-0-1/choose-journey.html">Start now</a></td>
+          </tr>
+          </tbody> -->
         </table>
 
     </div>
