--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,13 +29,13 @@
           </button>
       </form> -->
 
-      <!-- <div class="govuk-warning-text">
+      <div class="govuk-warning-text">
           <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
           <strong class="govuk-warning-text__text">
             <span class="govuk-warning-text__assistive">Warning</span>
-            If you use this prototype often, you'll need to <a class="govuk-link govuk-link--no-visited-state" href="/prototype-admin/clear-data"> clear the data</a> each time you view a different version.
+            You'll need to <a class="govuk-link govuk-link--no-visited-state" href="/prototype-admin/clear-data"> clear the data</a> each time you restart or if you view a different version of the prototype.
           </strong>
-        </div> -->
+        </div>
 
       <table class="govuk-table">
         <caption class="govuk-table__caption visually-hidden">List of versions</caption>
@@ -68,7 +68,7 @@
             <td class="govuk-table__cell "><a href="1-0-0/start.html">Start now</a></td>
         </tr>
         </tbody>
-        <!-- <tbody class="govuk-table__body">
+        <tbody class="govuk-table__body">
       
             <tr class="govuk-table__row">
               <th class="govuk-table__header" scope="row">Sardine 1.0.1 <p>31/08/2021</p></th>
@@ -77,6 +77,9 @@
                   
                   <ul class="govuk-list govuk-list--bullet">
                       <li>New page <a href="1-0-1/choose-journey.html">Choose journey</a></li>
+                      <li>New tag on check your answers</li>
+                      <li>Save and exit(review) button</li>
+                      <li>Incorrect character type validation</li>
                      
   
                     
@@ -85,7 +88,7 @@
               <td class="govuk-table__cell "><a href="#">Contents</a></td>
               <td class="govuk-table__cell "><a href="1-0-1/choose-journey.html">Start now</a></td>
           </tr>
-          </tbody> -->
+          </tbody>
         </table>
 
     </div>
