--- a/app/views/1-0-0/gov-05.html
+++ b/app/views/1-0-0/gov-05.html
@@ -17,7 +17,7 @@
         <div class="govuk-error-summary__body">
           <ul class="govuk-list govuk-error-summary__list">
             <li>
-              <a id="errorMessageTotal" href="#">The total number for gender representation must be the same as the number of board members. Enter gender representation numbers that are equal to <span id="totalGovernors"></span> (the number of board members)</a>
+              <a id="errorMessageTotal" href="#">The total number for gender representation must be the same as the number of board members. Enter gender representation numbers that are equal to <span class="totalGovernors"></span> (the number of board members)</a>
             </li>
             <li>
               <a id="errorMessageNumber" href="#">Enter a numeric value</a>
