error messages on 1-0-0 updated

--- a/app/views/1-0-0/gov-06.html
+++ b/app/views/1-0-0/gov-06.html
@@ -17,7 +17,7 @@
             <div class="govuk-error-summary__body">
               <ul class="govuk-list govuk-error-summary__list">
                 <li>
-              <a href="#passport-issued-day">The total number for age ranges must be the same as the number of board members. Enter age range numbers that are equal to <span class="totalGovernors"></span> (the number of board members)</a>
+              <a href="#passport-issued-day">The total number for age ranges must be the same as the number of board members. Enter age range numbers that are equal to <span class="totalGovernors"></span> </a>
                 </li>
                 <!-- <li>
                   <a href="#postcode-input">Enter a postcode, like AA1 1AA</a>
