--- a/app/views/1-0-1/gov-12.html
+++ b/app/views/1-0-1/gov-12.html
@@ -2,7 +2,7 @@
 {% extends "layout-back.html" %}
 
 {% block pageTitle %}
-  GOV.UK Prototype Kit
+  FE Workforce - Check your answers
 {% endblock %}
 
 {% block content %}
