--- a/app/views/1-0-0/gov-11.html
+++ b/app/views/1-0-0/gov-11.html
@@ -13,7 +13,29 @@
 
     <div class="govuk-grid-column-two-thirds">
 
-      
+        <div id="gov-error" class="govuk-error-summary hidden" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+            <h2 class="govuk-error-summary__title" id="error-summary-title">
+              There is a problem
+            </h2>
+            <div class="govuk-error-summary__body">
+              <ul class="govuk-list govuk-error-summary__list">
+                <li>
+                  <a id="filledError" href="#filled">The number entered is too high, it must be the same or less than the number of vacancies</a>
+                </li>
+                <li>
+                  <a id="6monthsError" href="#6months">The number entered is too high, it must be the same or less than the number of vacancies filled</a>
+                </li>
+                <li>
+                  <a id="unfilledError" href="#unfilled">The number entered is too high, it must be the same or less than the number of vacancies not filled</a>
+                </li>
+                <li>
+                  <a id="errorMessageNumber" href="#">Enter a numeric value</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+
          
       <h1 class="govuk-heading-l">
         Board member vacancies
@@ -28,6 +50,9 @@
         <label class="govuk-label govuk-label--m" for="vacancies">
           How many vacancies were there during the academic year?
         </label>
+        <span class="govuk-error-message numeric-message hidden">
+            <span class="govuk-visually-hidden">Error:</span>Enter a numeric value  
+          </span>
         <input class="govuk-input govuk-input--width-5" id="vacancies" name="vacancies" type="text" value="{{ data['vacancies'] }}">
       </div>
       
@@ -35,6 +60,9 @@
         <label class="govuk-label govuk-label--m" for="filled">
           How many were filled?
         </label>
+        <span class="govuk-error-message numeric-message hidden">
+            <span class="govuk-visually-hidden">Error:</span>Enter a numeric value  
+          </span>
         <input class="govuk-input govuk-input--width-5" id="filled" name="filled" type="text" value="{{ data['filled'] }}">
       </div>
       
@@ -42,6 +70,9 @@
         <label class="govuk-label govuk-label--m" for="6months">
           How many took 6 months or longer to fill?
         </label>
+        <span class="govuk-error-message numeric-message hidden">
+            <span class="govuk-visually-hidden">Error:</span>Enter a numeric value  
+          </span>
         <input class="govuk-input govuk-input--width-5" id="6months" name="6months" type="text" value="{{ data['6months'] }}">
       </div>
       
@@ -49,10 +80,13 @@
         <label class="govuk-label govuk-label--m" for="unfilled">
           How many vacancies have been open for 6 months or longer and are still unfilled?
         </label>
+        <span class="govuk-error-message numeric-message hidden">
+            <span class="govuk-visually-hidden">Error:</span>Enter a numeric value  
+          </span>
         <input class="govuk-input govuk-input--width-5" id="unfilled" name="unfilled" type="text" value="{{ data['unfilled'] }}">
       </div>
       
-      <button role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+      <button id="memberVacancyButton" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
         Save and continue
       </button>
 </form>
