--- a/app/views/1-0-1/includes/sidebar_related.html
+++ b/app/views/1-0-1/includes/sidebar_related.html
@@ -28,7 +28,12 @@
   </h2>
   <nav role="navigation" aria-labelledby="subsection-title">
     <ul class="govuk-list govuk-!-font-size-16">
-      <li>
+        <li>
+            <a href="https://www.gov.uk/government/publications/further-education-workforce-data-collection">
+              Governor data specification
+            </a>
+          </li>
+      <!-- <li>
         <a href="https://www.gov.uk/government/publications/ilr-specification-validation-rules-and-appendices-2019-to-2020#attachment_3569561" target="_blank">
           2019 to 2020 submission timetable (appendix A)
         </a>
@@ -37,11 +42,11 @@
         <a href="https://www.gov.uk/government/publications/ilr-specification-validation-rules-and-appendices-2018-to-2019#attachment_3415543" target="_blank">
           2018 to 2019 submission timetable (appendix A)
         </a>
-      </li>
+      </li> -->
     </ul>
   </nav>
 
-  <h2 class="govuk-heading-m" id="subsection-title">
+  <!-- <h2 class="govuk-heading-m" id="subsection-title">
    Tools and services
   </h2>
   <nav role="navigation" aria-labelledby="subsection-title">
@@ -66,11 +71,7 @@
           ILR FileMerge
         </a>
       </li>
-      <li>
-        <a href="#">
-          Governor data specification
-        </a>
-      </li>
+      
     </ul>
-  </nav>
+  </nav> -->
 </aside>
