--- a/app/views/1-0-1/start.html
+++ b/app/views/1-0-1/start.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="govuk-grid-column-one-third">
-      
+        {% include "./includes/sidebar_related.html" %}
     </div>
   </div>
 
