update to index
done

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -60,7 +60,7 @@
                     <li>Updated content on <a href="1-0-0/gov-12.html">Gov 12 check your answers</a>. User story <a target="blank" href="https://sfa-gov-uk.visualstudio.com.mcas.ms/DCT/_workitems/edit/114802/">114802</a></li>
                     <li>Updated content on <a href="1-0-0/gov-07.html">Gov 07 disability data</a>. User story <a target="blank" href="https://sfa-gov-uk.visualstudio.com.mcas.ms/DCT/_workitems/edit/114787/">114787</a></li>
                     <li>Updated content on <a href="1-0-0/gov-09.html">Gov 09 time board members have served</a>. User story <a target="blank" href="https://sfa-gov-uk.visualstudio.com.mcas.ms/DCT/_workitems/edit/114788/">114788</a></li>
-                    <li>Updated content on <a href="1-0-0/gov-11.html">Gov 11 time board members vacancy</a>. User story <a target="blank" href="https://sfa-gov-uk.visualstudio.com.mcas.ms/DCT/_workitems/edit/114801/">114801</a></li>
+                    <li>Updated content on <a href="1-0-0/gov-11.html">Gov 11 board members vacancy</a>. User story <a target="blank" href="https://sfa-gov-uk.visualstudio.com.mcas.ms/DCT/_workitems/edit/114801/">114801</a></li>
                     
                   
                 </ul>
